--- a/MovieApp/movie_app/src/Component/list/list.css
+++ b/MovieApp/movie_app/src/Component/list/list.css
@@ -5,13 +5,14 @@
 }
 
 
-.list .listItem{
+.list .listTitle{
     width:100%;
     margin-top: 10px;
     color: white;
     font-size: 20px;
     font-weight: 500;
     margin-left:  50px;
+    
 
 }
 
@@ -19,6 +20,8 @@
 margin-left: 50px;
 display: flex;
 width: max-content;
+padding-right: 5px;
+margin-right: 5px;
 
 
 }
