--- a/MovieApp/movie_app/src/Component/list/list.css
+++ b/MovieApp/movie_app/src/Component/list/list.css
@@ -1,20 +1,22 @@
 .list{
     width:100%;
-    margin-top: 10px;
+    margin-top: 3px;
 
 }
 
 
-.list .listTitle{
-    width:100%;
-    margin-top: 10px;
+.listTitle{
+    width:fit-content;
+    position: inherit;
+    margin-top: 5px;
     color: white;
     font-size: 20px;
     font-weight: 500;
-    margin-left:  50px;
-    
-
+     margin-left:  5px; 
+     text-align: left;
+     display: flex;
 }
+
 
 .wrapper .container{
 margin-left: 50px;
@@ -25,3 +27,17 @@ margin-right: 5px;
 
 
 }
+
+
+.sliderArrowLeft{
+    width: 50px;
+    height: 100%;
+    background-color: rgb(22,22,22,0.5);
+    color: white;
+    margin-top: 5px;
+    align-content: left;
+    margin-left: 1px;
+    /* position: absolute;     */
+
+}
+
